tests/rosetta/transpiler/OCaml/bioinformatics-sequence-mutation.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/bioinformatics-sequence-mutation.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Bioinformatics-sequence-mutation" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/bioinformatics-sequence-mutation.ml", line 224, characters 10-29:
224 |   seed := List.nth (!res) (0);
                ^^^^^^^^^^^^^^^^^^^
Error: This expression has type Obj.t but an expression was expected of type
         int
